# db-public

./: .gitignore  .travis.yml  Cargo.toml  README.md  concat.go  config.go  export.go  export_to_json.go  go.mod  go.sum  import.go  main.go  sql_provider.go  table.go  table_definitions.go  test_sql_scripts.sh
Customizations/: NecroSpellReminders.sql  SolidRunSpeedIcon.sql
Enhancements/: Insta-cast buffs.sql  NecroSpellReminders.sql  SolidRunSpeedIcon.sql
config/: config.example.yml
customizations/: InstaCastBuffs.sql  ServerType.PVE.DreadedSeals.sql  ServerType.PVE.Keeps.sql  ServerType.PVE.RebalancedKeeps.sql  ServerType.PVEPVP.CrossRealmItems.sql  SolidRunSpeedIcon.sql  UpdatedSpecMultipliers.sql
data/: Ability.json  Area.json  Artifact.json  ArtifactBonus.json  AutoXMLUpdate.json  Battleground.json  ClassXRealmAbility.json  ClassXSpecialization.json  CraftedItem.json  DataQuest.json  Door.json  Faction.json  FactionAggroLevel.json  InstanceXElement.json  Keep.json  KeepComponent.json  KeepPosition.json  LineXSpell.json  LootGenerator.json  LootOTD.json  LootTemplate.json  Mob.4.json  MobXLootTemplate.json  Path.json  Quest.json  Race.json  Regions.json  RewardQuest.json  Salvage.json  SalvageYield.json  SpecXAbility.json  Specialization.json  SpellLine.json  SpellXCustomValues.json  StartupLocation.json  Style.json  StyleXSpell.json  WorldObject.json  ZonePoint.json  Zones.json  (+4 more)
schema_mysql/: Ability.sql  ArtifactBonus.sql  AutoXMLUpdate.sql  Ban.sql  Battleground.sql  BindPoint.sql  CharacterXMasterLevel.sql  CharacterXOneTimeDrop.sql  CraftedItem.sql  (+28 more)
(+388 files in other folders)
