[package]
name = "public-db-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
getopts = "0.2.21"
serde = { version="1.0.217", features=["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.137"
rusqlite = { version="0.33.0", features=["bundled"] }
mysql = "26.0.0"
aho-corasick = "1.1.3"

[profile.release]
strip = true
opt-level = "s"
lto = true

[profile.dev]
opt-level = 1