[package]
name = "public-db-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version="1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.137"
rusqlite = { version="0.33.0", features = ["bundled"] }
mysql = { version="26.0.0", features = ["minimal-rust"], default-features = false }
aho-corasick = "1.1.3"
clap = { version = "4.5.31", features = ["derive", "std", "help", "usage"], default-features = false }
reqwest = { version = "0.12.12", features = ["blocking", "rustls-tls"], default-features = false }
sevenz-rust2 = "0.10.0"

[profile.release]
strip = true
opt-level = "s"
lto = true

[profile.dev]
opt-level = 1
